fixed up home and such
the reason its being stretched out rn on mobile is bc of fixed pixels and the whole thing is flex. once we fix the pixels i think it should work, then we gotta just work on scaling it

--- a/styles/extracurriculars.css
+++ b/styles/extracurriculars.css
@@ -94,11 +94,11 @@ span {
 
 .ball1,.ball2,.ball3 {
     border-radius: 100px;
-    height: 150px;
-    width: 150px;
+    width: 9vw;
+    height: 9vw;
     background-size: cover;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 1.5vw;
+    margin-right: 1.5vw;
     z-index: 2;
     position: relative;
     transition: 0.5s ease all;
