--- a/styles/header.css
+++ b/styles/header.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     width: 100%; /* position:fixed messes it up so set it manually*/
-    height: 60px;   
+    height: 3vw;   
     top: 0px;
     z-index: 100; /* the background wasn't turning transparent, it was just a z-index issue*/
 }
